--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+.idea/workspace.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/workspace.xml
