Update of configurations files

--- a/.env
+++ b/.env
@@ -33,3 +33,9 @@ DATABASE_URL=mysql://root@127.0.0.1/exakis
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+### OAuth Azure ###
+CLIENT_ID=27fb84fe-4baf-4b6b-bfe7-f2d0638f2790
+CLIENT_SECRET=Zg2^04#WjA#h%6Q{]eK53J&`
+TENNANT=atlantisproject.onmicrosoft.com
+### OAuth Azure ###
